Fix build, add gitignore